--- a/python/dbs_flask_tutorial/templates/index.html
+++ b/python/dbs_flask_tutorial/templates/index.html
@@ -5,26 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Home</title>
 
     <!-- CSS. -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/register_login.css') }}">
 </head>
 <body>
     {% include 'topNavigationBar.html' %}
 
     <div class="body-center">
-        <h1>Login Page</h1>
-
-        <form method="POST" action="">
-            {{ form.hidden_tag() }}
-            {{ form.username }}
-            {{ form.password }}
-            {{ form.submit }}
-        </form>
-
-        <p class="text-center">Don't have an account? <a href="{{ url_for('register') }}">Sign up</a>.</p>
+        <h1>DBS Flask Tutorial</h1><hr>
+        <ul>
+            <li><a href="{{ url_for('register') }}">Register</a> account</li>
+            <li><a href="{{ url_for('login') }}">Login</a> with authentication</li>
+            <li>CRUD operations</li>
+                <ul>
+                    <li>Create expense</li>
+                    <li>Read expenses</li>
+                    <li>Update expense</li>
+                    <li>Delete expense</li>
+                </ul>
+        </ul>
     </div>
 
     {% include 'footer.html' %}
