--- a/python/dbs_flask_tutorial/templates/register.html
+++ b/python/dbs_flask_tutorial/templates/register.html
@@ -6,23 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    
+    <!-- CSS. -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/register_login.css') }}">
 </head>
 <body>
-    <h1>Register Page</h1>
-    <!-- Render FlaskForm validationError: https://stackabuse.com/flask-form-validation-with-flask-wtf/ -->
-    <!-- Jinja syntax: https://jinja.palletsprojects.com/en/3.1.x/templates/. -->
-    {% for field, errors in form.errors.items() %}
-        <p class='errorMsg'>{{ '\n'.join(errors) }}</p>
-    {% endfor %}
+    {% include 'topNavigationBar.html' %}
 
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        {{ form.username }}
-        {{ form.password }}
-        {{ form.submit }}
-    </form>
+    <div class="body-center">
+        <h1>Register Page</h1><hr>
+        <!-- Render FlaskForm validationError: https://stackabuse.com/flask-form-validation-with-flask-wtf/ -->
+        <!-- Jinja syntax: https://jinja.palletsprojects.com/en/3.1.x/templates/. -->
+        {% for field, errors in form.errors.items() %}
+            <p class='errorMsg'>{{ '\n'.join(errors) }}</p>
+        {% endfor %}
 
-    <a href="{{ url_for('login') }}">Already have an  account? Log In</a>
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <label>Username</label><br>
+            {{ form.username }}<br>
+            <label>Password</label><br>
+            {{ form.password }}<br>
+            {{ form.submit }}
+        </form>
+
+        <p class="text-center">Already have an account? <a href="{{ url_for('login') }}">Log in</a>.</p>
+    </div>
+
+    {% include 'footer.html' %}
+
+    <!-- Javascript. -->
+    <script src="{{url_for('static', filename='javascript/global.js')}}"></script>
 </body>
 </html>
