--- a/python/dbs_flask_tutorial/static/css/global.css
+++ b/python/dbs_flask_tutorial/static/css/global.css
@@ -20,6 +20,33 @@
     text-align: center;
 }
 
+/* Form. =====================================================================*/
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
 /* Top navigation bar. =======================================================*/
 
 .top-nav {
@@ -29,13 +56,17 @@
 }
 
 /* Style the links inside the navigation bar */
-.top-nav a {
+.top-nav a, .top-nav span{
     float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+}
+
+.top-nav span {
+    float: right;
 }
 
 /* Change the color of links on hover */
@@ -48,6 +79,48 @@
 .top-nav a.active {
     background-color: #04AA6D;
     color: white;
+}
+
+a.top-right-nav {
+    float: right;
+}
+
+/* The dropdown container */
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    /* Why 56px? */
+    top: 56px; 
+    background-color: #f9f9f9;
+    min-width: 140.88px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 /* Footer =================================================================== */
