--- a/python/dbs_flask_tutorial/templates/footer.html
+++ b/python/dbs_flask_tutorial/templates/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>Copyright © 2022-<span id="copyright_year"></span> | Developed by chuchuTech</p>
+    <p>Copyright © 2022-<span id="copyright_year"></span> | Developed by <a href="https://www.youtube.com/channel/UC4llhnu1076JPwclEs8s3oA">chuchuTech</a></p>
 </footer>
