--- a/python/dbs_flask_tutorial/static/css/dashboard.css
+++ b/python/dbs_flask_tutorial/static/css/dashboard.css
@@ -34,6 +34,15 @@ tr:nth-child(odd) {
     background-color: #dddddd;
 }
 
+.delete-expense {
+    text-decoration: underline;
+    color: #0000EE;
+}
+
+.delete-expense:hover {
+    cursor: pointer;
+}
+
 #barChart {
     display: none;
 }
