--- a/python/dbs_flask_tutorial/static/css/global.css
+++ b/python/dbs_flask_tutorial/static/css/global.css
@@ -47,6 +47,40 @@ input[type=submit]:hover {
     background-color: #45a049;
 }
 
+/* Modal. ====================================================================*/
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    /* margin: auto; */
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%, -30%);
+    border: 1px solid #888;
+    width: 30%;
+    padding: 10px;
+}
+
+.modal-content button {
+    float: right;
+    margin-right: 10px;
+}
+
 /* Top navigation bar. =======================================================*/
 
 .top-nav {
