--- a/python/dbs_flask_tutorial/templates/footer.html
+++ b/python/dbs_flask_tutorial/templates/footer.html
@@ -1,3 +1,4 @@
 <footer>
-    <p>Copyright © 2022-<span id="copyright_year"></span> | Developed by <a href="https://www.youtube.com/channel/UC4llhnu1076JPwclEs8s3oA">chuchuTech</a></p>
+    <!-- Use target=_blank". to open link in new tab. -->
+    <p>Copyright © 2022-<span id="copyright_year"></span> | Developed by <a href="https://www.youtube.com/channel/UC4llhnu1076JPwclEs8s3oA" target="_blank">chuchuTech</a></p>
 </footer>
